Fix nav install button not hidding on iOS?

--- a/view/app/app.css
+++ b/view/app/app.css
@@ -23,7 +23,7 @@ a {
 }
 
 #nav-bar #title,
-#nav-bar .install {
+#nav-bar .install button {
   transition: opacity 0.25s ease-in-out;
 }
 
